[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 12.3671, 406.146, 0, 0, 0, 0, 150.61, 229.179, 0, 0, 0, 0, 336.61, 267.179, 0, 0, 0, 0, 122.61, 469.179, 0, 0, 0, 0, 548.952, 305.258, 0, 0, 0, 0, 686.61, 516.179, 0, 0, 0, 0, 813.61, 245.179, 0, 0, 0, 0, 1022, 405 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Wall" type="Line2D" parent="."]
points = PoolVector2Array( 550, 0, 550, 600 )
width = 100.0
default_color = Color( 0.835294, 0.168627, 0.262745, 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -5.61023, 19.8214 )
curve = SubResource( 1 )

[node name="CharacterFollow" type="PathFollow2D" parent="Path2D"]
position = Vector2( 12.3671, 406.146 )
rotation = -0.907648
loop = false

[node name="Sprite" type="Sprite" parent="Path2D/CharacterFollow"]
position = Vector2( 0.153076, -0.542389 )
rotation = 0.0208471
texture = ExtResource( 1 )

[node name="Road" type="Line2D" parent="."]
points = PoolVector2Array( 3.29645, 422.241, 146, 249, 332, 289, 114, 491, 544.601, 320.04, 678, 540, 810, 270, 1017.58, 424.023 )
default_color = Color( 0.890196, 0.670588, 0.537255, 1 )

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 40.0
text = "Speed V (pixel/s)"

[node name="TimeLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 100.0
text = "Interval T (s)"

[node name="Time" type="SpinBox" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 125.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1

[node name="Speed" type="SpinBox" parent="."]
margin_left = 100.0
margin_top = 40.0
margin_right = 200.0
margin_bottom = 65.0
min_value = 500.0
max_value = 2000.0
step = 100.0
value = 1000.0

[node name="Button" type="Button" parent="."]
margin_left = 280.0
margin_top = 40.0
margin_right = 480.0
margin_bottom = 120.0
shortcut_in_tooltip = false
action_mode = 0
text = "START"

[node name="ActualTextLabel" type="Label" parent="."]
margin_left = 620.0
margin_top = 30.0
margin_right = 756.0
margin_bottom = 50.0
text = "Actual collision time:"

[node name="BisectionTextLabel" type="Label" parent="."]
margin_left = 620.0
margin_top = 90.0
margin_right = 740.0
margin_bottom = 110.0
text = "Collision time by Bisection;"

[node name="ActualValueLabel" type="Label" parent="."]
margin_left = 800.0
margin_top = 30.0
margin_right = 920.0
margin_bottom = 50.0
text = "(s)"

[node name="BisectionValueLabel" type="Label" parent="."]
margin_left = 800.0
margin_top = 90.0
margin_right = 920.0
margin_bottom = 110.0
text = "(s)"

[node name="FcTextLabel" type="Label" parent="."]
margin_left = 620.0
margin_top = 60.0
margin_right = 740.0
margin_bottom = 80.0
text = "Collision time by FC:"

[node name="FcValueLabel" type="Label" parent="."]
margin_left = 800.0
margin_top = 60.0
margin_right = 920.0
margin_bottom = 80.0
text = "(s)"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.065

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
